--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@tailwindcss/forms": "^0.5.10",
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "vue": "^3.5.13"
     }
 }
