--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-csp": "^2.10",
         "symfony/css-selector": "^7.2",
         "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
+        "enlightn/security-checker": "^2.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
         "laravel/pail": "^1.1",
