--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "phpmailer/phpmailer": "^6.10",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-csp": "^2.10",
         "symfony/css-selector": "^7.2",
