--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "openai-php/laravel": "^0.11.0",
         "phpmailer/phpmailer": "^6.10",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
