--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "phpmailer/phpmailer": "^6.10",
         "setasign/fpdf": "^1.8",
