--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
+        "cweagans/composer-patches": "^2.0",
         "enlightn/security-checker": "^2.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
@@ -76,6 +77,11 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "patches": {
+            "openai-php/laravel": [
+                "patches/openai-laravel-namespace-fix.patch"
+            ]
         }
     },
     "config": {
@@ -84,7 +90,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "cweagans/composer-patches": true,
+            "cweagans/composer-configurable-plugin": true
         }
     },
     "minimum-stability": "stable",
