--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.19",
+        "@fullcalendar/interaction": "^6.1.19",
+        "@fullcalendar/resource-timegrid": "^6.1.19",
         "@tailwindcss/forms": "^0.5.10",
         "alpinejs": "^3.14.9",
+        "sweetalert2": "^11.26.3",
         "vue": "^3.5.13"
     }
 }
