--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "smalot/pdfparser": "^2.12",
         "spatie/laravel-csp": "^2.10",
         "symfony/css-selector": "^7.2",
-        "symfony/dom-crawler": "^7.2"
+        "symfony/dom-crawler": "^7.2",
+        "thiagoalessio/tesseract_ocr": "^2.13"
     },
     "require-dev": {
         "cweagans/composer-patches": "^2.0",
