--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.phpunit.cache
 /node_modules
-/public/build
+# /public/build  # Comentado para despliegue - subir assets compilados
 /public/hot
 /public/storage
 /storage/*.key
