--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,8 @@
+<IfModule mod_headers.c>
+    Header always unset X-Frame-Options
+    Header always set X-Frame-Options "SAMEORIGIN"
+</IfModule>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
