--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "maatwebsite/excel": "^3.1",
         "openai-php/laravel": "^0.11.0",
         "phpmailer/phpmailer": "^6.10",
+        "phpoffice/phpspreadsheet": "^1.30",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
