--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Firebase Cloud Messaging
+FIREBASE_PROJECT_ID=
+FIREBASE_CREDENTIALS_PATH="${APP_ROOT}/storage/app/firebase/service-account.json"
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
+FIREBASE_VAPID_KEY=
