--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,10 @@
 
     RewriteEngine On
 
+    # Permitir acceso a manifest.json y firebase-messaging-sw.js
+    RewriteRule ^manifest\.json$ - [L]
+    RewriteRule ^firebase-messaging-sw\.js$ - [L]
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
