--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Docupipe OCR (optional - enable when you already have Docupipe schemas)
+DOCUPIPE_ENABLED=false
+DOCUPIPE_BASE_URL=https://app.docupipe.com
+DOCUPIPE_SUBMIT_PATH=/v1/documents
+DOCUPIPE_API_KEY=
+DOCUPIPE_REQUEST_TIMEOUT=120
+DOCUPIPE_SCHEMA_SISE=SISE
+DOCUPIPE_SCHEMA_MEGASA=MEGASA
+DOCUPIPE_SCHEMA_DEFAULT=
