--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "intervention/image": "^3.11",
+        "jenssegers/agent": "^2.6",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
