--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "google-gemini-php/client": "^2.7",
         "intervention/image": "^3.11",
         "jenssegers/agent": "^2.6",
         "laravel-lang/common": "^6.7",
