--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fullcalendar/core": "^6.1.19",
         "@fullcalendar/interaction": "^6.1.19",
         "@fullcalendar/resource-timegrid": "^6.1.19",
+        "@google/generative-ai": "^0.24.1",
         "@tailwindcss/forms": "^0.5.10",
         "alpinejs": "^3.15.2",
         "sweetalert2": "^11.26.3",
