fix: habilitar soporte AVIF y corregir manejo de errores de validación
- Actualizar validación en Incidencias para permitir archivos .avif y .webp.
- Modificar Handler de excepciones para no enmascarar errores de validación como Error 500.
- Añadir tipo MIME y cabeceras de caché para .avif en .htaccess.
-cambio del modo oscuro en incidencias

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,9 @@
     Header always set X-Frame-Options "SAMEORIGIN"
 </IfModule>
 
+# Ensure AVIF is served with correct MIME type
+AddType image/avif .avif
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
@@ -44,7 +47,7 @@
     </FilesMatch>
 
     # Cache images
-    <FilesMatch "\.(jpg|jpeg|png|gif|ico|svg|webp)$">
+    <FilesMatch "\.(jpg|jpeg|png|gif|ico|svg|webp|avif)$">
         Header set Cache-Control "public, max-age=31536000, immutable"
     </FilesMatch>
 
