--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -80,7 +80,17 @@ DOCUPIPE_REQUEST_TIMEOUT=120
 DOCUPIPE_SCHEMA_SISE=SISE
 DOCUPIPE_SCHEMA_MEGASA=MEGASA
 DOCUPIPE_SCHEMA_DEFAULT=
-# Firebase Cloud Messaging
+# =====================================================================
+# KEYS EXTERNAS (Rellenar con valores reales)
+# =====================================================================
+OPENAI_API_KEY="Aqui_tu_clave_sk-..."
+ANTHROPIC_API_KEY="Aqui_tu_clave_sk-ant-..."
+GEMINI_API_KEY="Aqui_tu_clave_AIza..."
+FERRAWIN_API_TOKEN="Aqui_tu_token_ferrawin"
+
+# =====================================================================
+# FIREBASE
+# =====================================================================
 FIREBASE_PROJECT_ID=
 FIREBASE_CREDENTIALS_PATH="${APP_ROOT}/storage/app/firebase/service-account.json"
 FIREBASE_API_KEY=
